@@ -3,7 +3,6 @@ package com.bulade.donor.common.utils.servlet;
 import cn.hutool.core.exceptions.UtilException;
 import cn.hutool.core.io.IoUtil;
 import cn.hutool.core.text.CharSequenceUtil;
-import cn.hutool.core.util.StrUtil;
 import cn.hutool.extra.servlet.JakartaServletUtil;
 import com.bulade.donor.common.utils.json.JsonUtils;
 
@@ -18,6 +17,7 @@ import org.springframework.web.context.request.ServletRequestAttributes;
 import java.io.IOException;
 import java.io.Writer;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Map;
 
 /**
@@ -48,9 +48,15 @@ public class ServletUtils {
      * @param filename 文件名
      * @param content  附件内容
      */
-    public static void writeAttachment(HttpServletResponse response, String filename, byte[] content) throws IOException {
+    public static void writeAttachment(
+        HttpServletResponse response,
+        String filename,
+        byte[] content
+    )
+        throws IOException {
         // 设置 header 和 contentType
-        response.setHeader("Content-Disposition", "attachment;filename=" + URLEncoder.encode(filename, "UTF-8"));
+        response.setHeader("Content-Disposition", "attachment;filename="
+            + URLEncoder.encode(filename, StandardCharsets.UTF_8));
         response.setContentType(MediaType.APPLICATION_OCTET_STREAM_VALUE);
         // 输出附件
         IoUtil.write(response.getOutputStream(), false, content);
@@ -99,7 +105,7 @@ public class ServletUtils {
     }
 
     public static boolean isJsonRequest(ServletRequest request) {
-        return StrUtil.startWithIgnoreCase(request.getContentType(), MediaType.APPLICATION_JSON_VALUE);
+        return CharSequenceUtil.startWithIgnoreCase(request.getContentType(), MediaType.APPLICATION_JSON_VALUE);
     }
 
     public static String getBody(HttpServletRequest request) {
@@ -109,7 +115,6 @@ public class ServletUtils {
     public static byte[] getBodyBytes(HttpServletRequest request) {
         return JakartaServletUtil.getBodyBytes(request);
     }
-
 
     public static void write(HttpServletResponse response, String text, String contentType) {
         response.setContentType(contentType);
